GNOME Bugzilla – Bug 757282
[REGRESSION] "window: Ignore geometry widget" commit breaks gnome-terminal window size when using CSD
Last modified: 2015-12-20 23:30:31 UTC
The commit """ commit 08974a1e9a6099a5a94b9d56970dbf96e473ba87 Author: Benjamin Otte <otte@redhat.com> Date: Tue Mar 24 04:33:45 2015 +0100 window: Ignore geometry widget Ignore the geometry widget passed to gtk_window_set_geometry_hints(). Usind the widget itself was a hack that complicates the size request machinery. It is also incorrect in that it doesn't respect height-for-width. Last but not least, it was only used by gnome-terminal and that application can easily work without it. """ causes gnome-terminal window's size to be smaller than usual, and decrease in size quickly over time (for example pressing enter or alt-tabbing back and forth to the window. The same issue doesn't reproduce when using the X11 backend when using SSD, but it does reproduce when running the X11` backend with GTK_CSD set to 1.
this has been fixed on the gtk side.
Hi, Maybe the issue is fixed, but applying the patch above, I'm unsure, and maybe this issue should be re-open. Of course, if I'm plain wrong, feel free to ignore my comments. ( I mean : https://git.gnome.org/browse/gtk%2B/commit/?id=08974a1e9a6099a5a94b9d56970dbf96e473ba87 ) In fact, I got the same bug since a while, and it is very painfull, mostly when my main application is ... the Gnome-terminal :-) FYI, and to help a bit : 1. I applied the above patch to the gtk+3.0-3.16.7 (using apt-get source and so on). Got some little fuzz, but it applied correctly, and after building the libgtk-3.0, now I got a Gnome terminal at (approx.) 2 lines X 3 col. (was something like 120 col. 30 lines before :-) Means, IMHO, your patch didn't fix completely this issue. But, in meantime, I found that the issue seems to no longer occur when I keep the menubar visible in the Gnome-terminal preferences. TO verify : disable the menubar, and try F11 to have the terminal in fullscreen mode, then hit F11 again and the new size and what happens to me is something certainly wrong. Now, enable the menubar again, and everything seems to work again + if not, the gnome-terminal is resize-able again (it was just no longer usable in normal mode in the previous case). Last but not least, I only had vertical size issue, but your patch added the same, horizontaly :-) HTH, and feel free to ask me further tests in case you need. -- ericb